# engram-dashboard

./: .gitignore  AGENT-CONTROL-GUIDE.md  CLAUDE.md  Cargo.toml  ORCHESTRA-DEMO.md  README.md  SETUP-FRESH-PC.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  richslot.html  run-dashboard-clean.bat  run-dashboard-release.bat  run-dashboard.bat  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.claude/agents/: reviewer-deep.md  worker-senior.md
.claude/handoff/: latest.md
.claude/references/: dictionary.md
.claude/skill-bindings/: adr.md  qa.md  research.md  review.md
.claude/skills/: README.md
.tasks/: step-dynamic-split-qa.md  step-dynamic-split.md  step10-qa.md  step10-tree-detach.md  step2-qa.md  step2-theme.md  step3-font.md  step4-layout.md  step4-qa.md  step5-agent-tree.md  step5-qa.md  step6-qa.md  step6-slot.md  step7-qa.md  step7-xterm.md  step8-monaco.md  step8-qa.md  step9-popup.md  step9-qa.md
Demoagent/: CLAUDE.md
Demoagent/.claude/: settings.json
_wip/: SKILLS-REVIEW-INDEX.md
_wip/adr/: REVIEW-NOTES.md  feedback.md
_wip/new-skill/: REVIEW-NOTES.md  SKILL.md  feedback.md
_wip/qa/: REVIEW-NOTES.md  SKILL.md  feedback.md
_wip/research/: REDESIGN-SPEC-v3.md  REDESIGN-SPEC.md  SKILL.md  feedback.md
_wip/review/: REVIEW-NOTES.md  SKILL.md
crates/engram-dashboard-core/: Cargo.toml
crates/engram-dashboard-core/examples/: headless.rs  session_smoke.rs  spike.rs  spike_breakaway.rs  transport_smoke.rs
crates/engram-dashboard-core/src/: lib.rs  output_view_buffer.rs  output_view_store.rs  replay_flight.rs
crates/engram-dashboard-core/src/agent/: manager.rs  mod.rs  name.rs  output_core.rs  preset.rs  profile.rs  reaper.rs  session.rs  session_tracker.rs  types.rs
crates/engram-dashboard-core/src/agent/backend/: claude.rs  codex.rs  gemini.rs  mod.rs  shell.rs
crates/engram-dashboard-core/src/agent/backend/fixtures/: claude_transcript.jsonl
crates/engram-dashboard-core/src/agent/platform/: mod.rs  process.rs
crates/engram-dashboard-core/src/agent/transport/: api.rs  mod.rs  pty.rs  stdio.rs
crates/engram-dashboard-core/src/persistence/: mod.rs  presets.rs
crates/engram-dashboard-core/src/pty/: manager.rs  output_core.rs  session.rs  types.rs
crates/engram-dashboard-core/src/pty/backend/: claude.rs  shell.rs
crates/engram-dashboard-core/src/pty/platform/: mod.rs  process.rs
crates/engram-dashboard-core/src/pty/transport/: pty.rs
crates/engram-dashboard-core/tests/: activation.rs  headless.rs  reaper.rs  session_smoke.rs  stdio_physical_pipe.rs  stdio_smoke.rs  transport_smoke.rs
crates/engram-dashboard-daemon/: Cargo.toml
crates/engram-dashboard-daemon/src/: connection_core.rs  instance.rs  lib.rs  main.rs  portfile.rs  ws.rs
crates/engram-dashboard-daemon/src/control/: ingress.rs  mcp_config.rs  mcp_server.rs  mod.rs  priming.rs  registry.rs
crates/engram-dashboard-daemon/src/experiment/: cli.rs  filler.rs  mod.rs  probe.rs  record.rs  transcript.rs
crates/engram-dashboard-daemon/tests/: control_send.rs  engram_send_cli.rs  mcp_control.rs  mcp_manager_lifecycle.rs  ws_e2e.rs
crates/engram-dashboard-discovery/: Cargo.toml
crates/engram-dashboard-discovery/src/: lib.rs
crates/engram-dashboard-discovery/tests/: stop_smoke.rs
crates/engram-dashboard-protocol/: Cargo.toml
crates/engram-dashboard-protocol/bindings/: AgentCommand.ts  AgentEvent.ts  AgentInfo.ts  AgentProfile.ts  AgentSpawnCommand.ts  AgentStatus.ts  Capabilities.ts  ClaudeOutputFormat.ts  ControlCaps.ts  EnvelopeFormat.ts  InputCaps.ts  ModelCaps.ts  OutputCaps.ts  OutputChunk.ts  Preset.ts  RequestId.ts  RestartPolicy.ts  RestoreOutcome.ts  RestoreReport.ts  SessionCaps.ts  SnapshotChunk.ts  StructuredEvent.ts  SubscribeAction.ts
crates/engram-dashboard-protocol/src/: codec.rs  discovery.rs  domain.rs  ids.rs  lib.rs  messages.rs
crates/engram-dashboard-protocol/tests/: codec_golden.rs  ts_export.rs
crates/engram-tray-host/: Cargo.toml  build.rs
crates/engram-tray-host/src/: core.rs  instance.rs  main.rs
docs/: README.md  backend-architecture-draft.md  backend-architecture-gemini-review.md  backend-architecture-gpt-review.md  backend-lld-stage1.md  backend-review-feedback.md  backend-stage2-briefing.md  frontend-integration-lld.md  frontend-review-fable.md  frontend-review-gemini.md  frontend-review-gpt.md  lld-request-guide-fable.md  lld-review-fable.md  lld-review-gemini.md  lld-review-gpt.md  testing-strategy.md  tracking.md
docs/briefings/: channel-spike.md  m2-session.md  m4-windows.md  m5-manager.md  m6a-logging.md  m6b-headless.md  m7-commands-lib.md  m8a-api-layer.md
docs/decisions/: 0001-kill-2동사.md  0002-output-event-seam.md  0003-output-status-sink-격리.md  (+100 more)
prompts/: agent-priming.md
scripts/: adr.mjs  build-release.ps1  cdp.mjs  engram.mjs
src/: App.tsx  index.css  main.tsx  themes.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/bindings/: LayoutNode.ts  Neighbors.ts  SlotContent.ts  SlotSpatial.ts  SplitDir.ts  View.ts  ViewMeta.ts  ViewSnapshot.ts
src-tauri/capabilities/: default.json  popup.json
src-tauri/examples/: headless.rs  session_smoke.rs  spike_breakaway.rs  transport_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  discovery.rs  embedded_carrier.rs  instance.rs  lib.rs  main.rs  output_channel.rs  output_router.rs
src-tauri/src/commands/: agent.rs  autostart.rs  discovery.rs  layout.rs  mod.rs  popout.rs  profile.rs  pty.rs  tray.rs
src-tauri/src/daemon_client/: connection.rs  lifecycle.rs  mod.rs  protocol_state.rs  replay_flight.rs  tests.rs
src-tauri/src/layout/: manager.rs  mod.rs  spatial.rs  tree.rs  types.rs
src-tauri/src/logging/: mod.rs
src-tauri/src/persistence/: mod.rs
src-tauri/src/pty/: claude.rs  drain.rs  manager.rs  mod.rs  output_core.rs  profile.rs  session.rs  session_tracker.rs  types.rs
src-tauri/src/pty/backend/: claude.rs  codex.rs  gemini.rs  mod.rs
src-tauri/src/pty/platform/: windows.rs
src-tauri/src/pty/transport/: api.rs  mod.rs
src-tauri/src/tray/: actions.rs  core.rs  mod.rs
(+449 files in other folders)
