# Cargo workspace 루트 (S12 phase 1). 정적 링크.
# 멤버: protocol(경계 계약) · core(에이전트 코어, Tauri import 0) · src-tauri(Embedded 앱).
# daemon(별도 bin)은 phase 2 에서 추가.
[workspace]
resolver = "2"
members = [
    "crates/engram-dashboard-protocol",
    "crates/engram-dashboard-core",
    "crates/engram-dashboard-daemon",
    "src-tauri",
]

# profile 은 workspace 루트에만 둘 수 있다(멤버에 두면 무시+경고). src-tauri 에서 이동.
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
