[package]
name = "engram-dashboard"
version = "0.1.0"
description = "Engram Dashboard"
authors = []
edition = "2021"

[lib]
name = "engram_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "engram-dashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# caret resolve(현재 2.11.2). Channel spike 검증 완료 — 최신 2.x 유지.
# ADR-0026 2단계: tray-icon=네이티브 시스템 트레이, image-ico=Image::from_bytes 의 .ico 디코드(트레이
# 아이콘을 .ico 에서 RGBA 로 풀어 컬러/회색 두 벌 생성 — 별도 image crate 불필요).
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-opener = "2"
# single-instance: ADR-0029(daemon-only) — 앱은 데몬 클라이언트 전역 단일 인스턴스(플러그인 무조건 등록).
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "1"   # discovery::DiscoveryError
dunce = "1"       # daemon exe 절대경로(canonicalize, UNC 회피) — WMI 는 상대경로면 RV=9
# logging::init_logging 만 코어에서 쓴다(ADR-0029 — in-proc 에이전트 호스팅 제거).
engram-dashboard-core = { path = "../crates/engram-dashboard-core" }
# discovery: daemon.json 공유 계약(DaemonInfo) + PROTOCOL_VERSION.
engram-dashboard-protocol = { path = "../crates/engram-dashboard-protocol" }
# S13 sub-step 2: 순수 데몬 발견/spawn/stop 로직(crate::discovery 로 re-export).
engram-dashboard-discovery = { path = "../crates/engram-dashboard-discovery" }
tauri-plugin-autostart = "2"

# ADR-0029: base64/futures-util/tokio/serde_json/windows(Threading,Foundation)/engram-dashboard-daemon
#   의존은 embedded carrier·instance.rs(in-proc 호스팅·폴더별 mutex) 제거로 전부 불필요해져 삭제됐다.

# profile.release 는 workspace 루트(../Cargo.toml)로 이동(멤버에 두면 무시됨).
