[package]
name = "engram-dashboard"
version = "0.1.0"
description = "Engram Dashboard"
authors = []
edition = "2021"

[lib]
name = "engram_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "engram-dashboard"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# caret resolve(현재 2.11.3 = 최신 2.x). 2.11.3에서 channel-data 데드락 수정 흡수
#   (carrier 리서치 2026-06-28: docs/research/tauri-channel-multiwindow-carrier-…). Channel spike 검증 완료.
# ADR-0026 2단계: tray-icon=네이티브 시스템 트레이, image-ico=Image::from_bytes 의 .ico 디코드(트레이
# 아이콘을 .ico 에서 RGBA 로 풀어 컬러/회색 두 벌 생성 — 별도 image crate 불필요).
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-opener = "2"
# single-instance: ADR-0029(daemon-only) — 앱은 데몬 클라이언트 전역 단일 인스턴스(플러그인 무조건 등록).
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
# S14 ViewManager: 레이아웃 타입을 프론트로 미러(ts-rs). ★protocol/daemon crate 가 아니라 src-tauri
# 안에서만 export★ — 데몬 UI 불가지론(ADR-0035): View/Layout/Slot 타입은 데몬·protocol 에 누설 금지.
ts-rs = { version = "10", features = ["uuid-impl"] }
tracing = "0.1"
thiserror = "1"   # discovery::DiscoveryError
dunce = "1"       # daemon exe 절대경로(canonicalize, UNC 회피) — WMI 는 상대경로면 RV=9
# logging::init_logging 만 코어에서 쓴다(ADR-0029 — in-proc 에이전트 호스팅 제거).
engram-dashboard-core = { path = "../crates/engram-dashboard-core" }
# discovery: daemon.json 공유 계약(DaemonInfo) + PROTOCOL_VERSION.
engram-dashboard-protocol = { path = "../crates/engram-dashboard-protocol" }
# S13 sub-step 2: 순수 데몬 발견/spawn/stop 로직(crate::discovery 로 re-export).
engram-dashboard-discovery = { path = "../crates/engram-dashboard-discovery" }
tauri-plugin-autostart = "2"

# T1(S14 모듈①): DaemonClient(비동기 WS 클라이언트) + OutputRouter(arc-swap) 신설을 위해
#   ADR-0029에서 제거했던 async/WS 관련 deps를 복원한다. 버전은 daemon crate와 정렬(ADR-0036).
# 데몬: tokio 1 / tokio-tungstenite 0.26 / futures-util 0.3 / serde_json 1 (Cargo.toml 실측).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
# 비동기 WS 클라이언트 — 데몬 WS 서버(ws.rs)와 동일 라이브러리(버전 정렬).
tokio-tungstenite = "0.26"
# SplitSink/SplitStream + StreamExt::next + SinkExt::send — WS read/write 분리에 필수.
futures-util = "0.3"
serde_json = "1"
# OutputRouter 핫패스 lock-free snapshot (spike §2 FIX-F6). 데몬에 없으므로 최신 1.x 안정 버전.
arc-swap = "1"

[dev-dependencies]
# T2(S14 모듈①) 격리 하네스: 실 데몬 없이 DaemonClient 핸드셰이크를 검증한다. daemon crate 의
#   start_test_server(in-process WS 서버)를 재사용해 connect→Auth→Hello→connected 를 실제 서버로 단언.
engram-dashboard-daemon = { path = "../crates/engram-dashboard-daemon" }
# 핸드셰이크 mock WS 서버(첫 송신 프레임=Auth 단언)에서 서버측 accept/Auth 응답을 직접 흉내낸다.
tokio-tungstenite = "0.26"
# T4(S14 모듈①) 재연결 백오프 테스트: tokio::time::pause()/advance() 로 가짜 시계를 돌려
#   지수 백오프(500ms→10s MAX5)를 실벽시계 없이 결정론적으로 검증한다(ADR-0038 — 매직 sleep 금지).
#   ★dev 전용★: 운영 빌드엔 test-util 이 안 들어간다(시계 제어는 테스트에서만).
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread", "time", "sync", "net"] }

# profile.release 는 workspace 루트(../Cargo.toml)로 이동(멤버에 두면 무시됨).
