[package]
name = "engram-dashboard-daemon"
version = "0.1.0"
edition = "2021"
description = "Engram Dashboard 데몬 — 단일 인스턴스, 랜덤 포트 + 토큰 발급, AgentManager 소유. WS 서버는 다음 단위(phase 2 step 4b)."

# 라이브러리 표면. main(bin)과 격리 하네스(tests/ws_e2e.rs)가 같은 기동 흐름(run / start_test_server)을
# 공유하도록 서버 조립·accept loop 를 lib 로 모았다. crate 이름 underscore 는 Rust path 규약.
[lib]
name = "engram_dashboard_daemon"
path = "src/lib.rs"

# 데몬 실행 진입점. AgentManager 를 daemon 프로세스가 소유하고, src-tauri(Embedded)와
# 같은 core/protocol 을 공유한다. lib 의 run() 만 호출하는 thin entry.
[[bin]]
name = "engram-dashboard-daemon"
path = "src/main.rs"

[dependencies]
engram-dashboard-core = { path = "../engram-dashboard-core" }
engram-dashboard-protocol = { path = "../engram-dashboard-protocol" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
# WS 서버(step 4b): accept_hdr_async(Origin 콜백)/split/Message. rustls 등 TLS 불필요(로컬 평문 WS).
tokio-tungstenite = "0.26"
# split(SplitSink/SplitStream) + StreamExt::next + SinkExt::send. WS read/write 분리에 필수.
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
# 토큰 난수: 256-bit(32B) → hex 64자. rand 대신 getrandom — 의존 가벼움(OS CSPRNG 직접).
getrandom = "0.2"
# WsOutputSink sink_id 생성 + AgentId 파싱. core/protocol 과 동일 1.x(AgentId=Uuid).
uuid = { version = "1", features = ["v4"] }
# data_dir: Tauri app_data_dir 과 동일한 RoamingAppData(%APPDATA%) 폴더 반환 → Embedded 와 경로 일치.
# ★버전 통일★: tauri 가 쓰는 dirs 6 으로 맞춰 두 모드(Embedded/Daemon)가 같은 data_dir 을 보게 한다
#   (tree 중복 제거). v6 도 data_dir() API 동일.
dirs = "6"

# named mutex(단일 인스턴스) + pid liveness(OpenProcess). core 와 동일 0.58 버전 고정.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }
