[package]
name = "engram-dashboard-daemon"
version = "0.1.0"
edition = "2021"
description = "Engram Dashboard 데몬 — 단일 인스턴스, 랜덤 포트 + 토큰 발급, AgentManager 소유. WS 서버는 다음 단위(phase 2 step 4b)."

# 라이브러리 표면. main(bin)과 격리 하네스(tests/ws_e2e.rs)가 같은 기동 흐름(run / start_test_server)을
# 공유하도록 서버 조립·accept loop 를 lib 로 모았다. crate 이름 underscore 는 Rust path 규약.
[lib]
name = "engram_dashboard_daemon"
path = "src/lib.rs"

# 데몬 실행 진입점. AgentManager 를 daemon 프로세스가 소유하고, src-tauri(Embedded)와
# 같은 core/protocol 을 공유한다. lib 의 run() 만 호출하는 thin entry.
[[bin]]
name = "engram-dashboard-daemon"
path = "src/main.rs"

# ADR-0086 스텝 2: CLI 입구. 스폰된 claude 가 Bash 로 부르는 최소 클라이언트 — env(ENGRAM_TOKEN/
# ENGRAM_CONTROL_URL)를 읽어 데몬 /control/send 로 POST 한다. 의존성 최소화(std TcpStream 손조립 HTTP).
[[bin]]
name = "engram-send"
path = "src/bin/engram-send.rs"

[dependencies]
engram-dashboard-core = { path = "../engram-dashboard-core" }
engram-dashboard-protocol = { path = "../engram-dashboard-protocol" }
# data_dir 단일 출처(ADR-0024) — embedded·daemon 이 같은 default_data_dir() 을 보게(순환 없음).
engram-dashboard-discovery = { path = "../engram-dashboard-discovery" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
# WS 서버(step 4b): accept_hdr_async(Origin 콜백)/split/Message. rustls 등 TLS 불필요(로컬 평문 WS).
tokio-tungstenite = "0.26"
# split(SplitSink/SplitStream) + StreamExt::next + SinkExt::send. WS read/write 분리에 필수.
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
# 토큰 난수: 256-bit(32B) → hex 64자. rand 대신 getrandom — 의존 가벼움(OS CSPRNG 직접).
getrandom = "0.2"
# WsOutputSink sink_id 생성 + AgentId 파싱. core/protocol 과 동일 1.x(AgentId=Uuid).
uuid = { version = "1", features = ["v4"] }

# ── ADR-0086: 제어 채널 MCP 입구 ────────────────────────────────────────────────
# rmcp = 공식 Rust MCP SDK. Streamable HTTP 서버 role(StreamableHttpService = Tower service, axum 에 nest).
#   server/macros(#[tool]/#[tool_router]/#[tool_handler]) + schemars(툴 input schema) + streamable-http-server.
#   ★OAuth 메타데이터 미광고★: StreamableHttpService 는 `.well-known` 라우트를 만들지 않는다 — claude 가
#   정적 Bearer 를 무시하는 #59467 조건을 원천 회피(초기화 실측 근거는 ADR-0086 §근거).
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
# axum = MCP 라우터 호스트(rmcp 가 axum 0.8 겨냥). 로컬 평문 HTTP — TLS 불필요.
#   json = /control/send 핸들러의 Json extractor/응답(ADR-0086 스텝 2 CLI 입구).
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
# tower = MCP /mcp 라우트에 bearer auth 미들웨어를 얹는 layer 조립(공식 auth 패턴).
tower = "0.5"
# tower-http(limit) = RequestBodyLimitLayer — axum DefaultBodyLimit 는 extractor 만 제한하나
#   rmcp StreamableHttpService 는 raw body 를 직접 소비하므로(extractor 미경유) 그 상한이 안 먹힌다.
#   이 레이어는 body 자체를 감싸 하위 소비자 전부에 상한을 강제한다(round-2 F4). limit feature 만.
tower-http = { version = "0.6", default-features = false, features = ["limit"] }
# CancellationToken(StreamableHttpServerConfig) + graceful shutdown 신호.
tokio-util = { version = "0.7", features = ["rt"] }
# http = axum 미들웨어에서 StatusCode/HeaderMap 직접 조작(rmcp 와 동일 1.x wire 타입).
http = "1"

# named mutex(단일 인스턴스) + pid liveness(OpenProcess). core 와 동일 0.58 버전 고정.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

# ── ADR-0086 통합 테스트 전용(dev) ─────────────────────────────────────────────
[dev-dependencies]
# 401 검증(무/오/stale 토큰)용 raw HTTP — rustls 로 platform-verifier 부담 없이(로컬 평문 http) 가볍게.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# happy-path handshake(initialize + tools/list + tools/call)는 rmcp 클라이언트 role 로 정직하게 검증.
rmcp = { version = "2.2.0", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
