[package]
name = "engram-dashboard-daemon"
version = "0.1.0"
edition = "2021"
description = "Engram Dashboard 데몬 — 단일 인스턴스, 랜덤 포트 + 토큰 발급, AgentManager 소유. WS 서버는 다음 단위(phase 2 step 4b)."

# 라이브러리 표면. main(bin)과 격리 하네스(tests/ws_e2e.rs)가 같은 기동 흐름(run / start_test_server)을
# 공유하도록 서버 조립·accept loop 를 lib 로 모았다. crate 이름 underscore 는 Rust path 규약.
[lib]
name = "engram_dashboard_daemon"
path = "src/lib.rs"

# ★test-harness (ADR-0088 Stage 1)★: handle_send 의 결정적 mid-flight epoch race 재현용 yield-seam
#   (resolve↔write 갭에서 발화하는 test hook)을 여는 기능 플래그. 기본 OFF — 운영(production) 빌드는
#   이 hook 을 **아예 컴파일하지 않는다**(feature OFF = handle_send 동작이 오늘과 byte-identical). core 의
#   같은-이름 기능도 함께 켜 `insert_test_session` seam 을 딸려 연다. 통합 테스트에서 켜는 방식 =
#   아래 [dev-dependencies] 의 self-dev-dependency(자기 crate 를 features=["test-harness"] 로 재선언) —
#   그러면 `cargo test -p engram-dashboard-daemon` 이 별도 --features 플래그 없이 hook 을 컴파일하고,
#   운영 dep 그래프(무-feature)엔 유니피케이션되지 않는다.
[features]
test-harness = ["engram-dashboard-core/test-harness"]

# 데몬 실행 진입점. AgentManager 를 daemon 프로세스가 소유하고, src-tauri(Embedded)와
# 같은 core/protocol 을 공유한다. lib 의 run() 만 호출하는 thin entry.
[[bin]]
name = "engram-dashboard-daemon"
path = "src/main.rs"

# ADR-0086 스텝 2: CLI 입구. 스폰된 claude 가 Bash 로 부르는 최소 클라이언트 — env(ENGRAM_TOKEN/
# ENGRAM_CONTROL_URL)를 읽어 데몬 /control/send 로 POST 한다. 의존성 최소화(std TcpStream 손조립 HTTP).
[[bin]]
name = "engram-send"
path = "src/bin/engram-send.rs"

# ★ADR-0090 Stage 2 파일럿 실험 드라이버★: 실 claude 를 스폰해 컨텍스트 포화·주입·프로브를 실측하고
#   JSONL 로 영속하는 실험 전용 bin. required-features 로 **운영/릴리즈 빌드가 절대 컴파일하지 않게**
#   막는다 — 실험 코드가 릴리즈 아티팩트에 유입되면 ADR-0090 위반(위 [dev-dependencies] 의 --all-targets
#   경고와 같은 계열). 통상 `cargo build` 는 이 bin 을 건너뛰고, 오직
#   `cargo build --features test-harness --bin saturation-pilot` 로만 만들어진다.
[[bin]]
name = "saturation-pilot"
path = "src/bin/saturation_pilot.rs"
required-features = ["test-harness"]

[dependencies]
engram-dashboard-core = { path = "../engram-dashboard-core" }
engram-dashboard-protocol = { path = "../engram-dashboard-protocol" }
# data_dir 단일 출처(ADR-0024) — embedded·daemon 이 같은 default_data_dir() 을 보게(순환 없음).
engram-dashboard-discovery = { path = "../engram-dashboard-discovery" }

tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
# WS 서버(step 4b): accept_hdr_async(Origin 콜백)/split/Message. rustls 등 TLS 불필요(로컬 평문 WS).
tokio-tungstenite = "0.26"
# split(SplitSink/SplitStream) + StreamExt::next + SinkExt::send. WS read/write 분리에 필수.
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
# 토큰 난수: 256-bit(32B) → hex 64자. rand 대신 getrandom — 의존 가벼움(OS CSPRNG 직접).
getrandom = "0.2"
# WsOutputSink sink_id 생성 + AgentId 파싱. core/protocol 과 동일 1.x(AgentId=Uuid).
uuid = { version = "1", features = ["v4"] }

# ── ADR-0086: 제어 채널 MCP 입구 ────────────────────────────────────────────────
# rmcp = 공식 Rust MCP SDK. Streamable HTTP 서버 role(StreamableHttpService = Tower service, axum 에 nest).
#   server/macros(#[tool]/#[tool_router]/#[tool_handler]) + schemars(툴 input schema) + streamable-http-server.
#   ★OAuth 메타데이터 미광고★: StreamableHttpService 는 `.well-known` 라우트를 만들지 않는다 — claude 가
#   정적 Bearer 를 무시하는 #59467 조건을 원천 회피(초기화 실측 근거는 ADR-0086 §근거).
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
# axum = MCP 라우터 호스트(rmcp 가 axum 0.8 겨냥). 로컬 평문 HTTP — TLS 불필요.
#   json = /control/send 핸들러의 Json extractor/응답(ADR-0086 스텝 2 CLI 입구).
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json"] }
# tower = MCP /mcp 라우트에 bearer auth 미들웨어를 얹는 layer 조립(공식 auth 패턴).
tower = "0.5"
# tower-http(limit) = RequestBodyLimitLayer — axum DefaultBodyLimit 는 extractor 만 제한하나
#   rmcp StreamableHttpService 는 raw body 를 직접 소비하므로(extractor 미경유) 그 상한이 안 먹힌다.
#   이 레이어는 body 자체를 감싸 하위 소비자 전부에 상한을 강제한다(round-2 F4). limit feature 만.
tower-http = { version = "0.6", default-features = false, features = ["limit"] }
# CancellationToken(StreamableHttpServerConfig) + graceful shutdown 신호.
tokio-util = { version = "0.7", features = ["rt"] }
# http = axum 미들웨어에서 StatusCode/HeaderMap 직접 조작(rmcp 와 동일 1.x wire 타입).
http = "1"

# named mutex(단일 인스턴스) + pid liveness(OpenProcess). core 와 동일 0.58 버전 고정.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

# ── ADR-0086 통합 테스트 전용(dev) ─────────────────────────────────────────────
[dev-dependencies]
# ★ADR-0088 self-dev-dependency 트릭★: 자기 crate(daemon lib)를 features=["test-harness"] 로 dev 그래프에
#   재선언한다 → `cargo test -p engram-dashboard-daemon` 이 lib 을 그 feature 로 컴파일해 handle_send 의
#   yield-seam hook 을 별도 --features 플래그 없이 켠다. dev 그래프에만 있으므로 운영 daemon 바이너리
#   (위 [dependencies] 무-feature)엔 유니피케이션되지 않는다 — 운영 빌드엔 hook 이 존재하지 않는다(no-leak).
#   daemon test-harness 는 core 의 test-harness 로 전이(forward)되므로 `insert_test_session` seam 도 함께
#   열린다(아래 core 재선언은 명시적 backup — daemon feature 미경유 경로에서도 seam 이 켜지게).
# ★운영 빌드 주의(feature 유니피케이션)★: cargo 는 한 번의 호출 안에서 같은 crate 의 feature 를
#   **합집합**한다. 그래서 `cargo build --release --all-targets` 처럼 lib 과 (dev-dependency 를 끌어오는)
#   test/bench 타깃을 **한 호출**로 빌드하면, 이 self-dev-dependency 의 `test-harness` 가 공유 lib 빌드에
#   유니피케이션돼 **그 호출로 나온 daemon 바이너리에 yield-seam hook 이 박힌다**. 통상 운영 경로
#   (`cargo build [--release]`, tauri 번들링)는 dev-dependency 를 안 끌어오므로 무해하다.
#   ▶ 규칙: 배포용 릴리스 바이너리는 `--all-targets` 로 만들지 않는다(core 의 test-harness dev-dep 도 동일
#     위험군 — 여기서 문서화만, 재설계 아님).
engram-dashboard-daemon = { path = ".", features = ["test-harness"] }
# ★ADR-0088 배달 관측 seam★: 통합 테스트가 `AgentManager::insert_test_session`(하네스 전용 세션 주입
#   seam)을 cross-crate 로 쓰려면 core 의 `test-harness` 기능을 켜야 한다. dev-dependency 로만 켜므로
#   운영 daemon 바이너리 의존 그래프(위 [dependencies] 의 무-feature core)엔 유니피케이션되지 않는다 —
#   운영 빌드는 seam 을 컴파일하지 않는다(no-leak). (feature-only dev-dep 재선언 — path 는 위와 동일 crate.)
engram-dashboard-core = { path = "../engram-dashboard-core", features = ["test-harness"] }
# 401 검증(무/오/stale 토큰)용 raw HTTP — rustls 로 platform-verifier 부담 없이(로컬 평문 http) 가볍게.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# happy-path handshake(initialize + tools/list + tools/call)는 rmcp 클라이언트 role 로 정직하게 검증.
rmcp = { version = "2.2.0", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
