[package]
name = "engram-tray-host"
version = "0.1.0"
edition = "2021"
description = "Engram Dashboard 트레이 호스트 — WebView 없는 순수 Rust 상주 런처(시작프로그램). 트레이 아이콘을 소유하고 데몬/UI lifecycle 을 제어한다(ADR-0023). 이번 sub-step 은 골격+core+트레이 GUI 까지(실제 spawn 배선은 다음 sub-step)."

# 트레이 GUI 진입점(bin). core(순수 로직)는 단위테스트 대상이고, main 은 tao 이벤트 루프 + tray-icon 배선만 담는 얇은 shell.
[[bin]]
name = "engram-tray-host"
path = "src/main.rs"

[dependencies]
thiserror = "1"
tracing = "0.1"
# 트레이 stub 로그용(RUST_LOG 토글). 프로젝트 규약 기본 OFF=warn.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 트레이 GUI 의존(Windows 전용). core 로직은 이 의존을 import 하지 않는다(순수 분리).
[target.'cfg(windows)'.dependencies]
# 이벤트 루프(Windows 에서 트레이는 메인 스레드 이벤트 루프 필수).
tao = "0.31"
# 트레이 아이콘 + 컨텍스트 메뉴. tao EventLoop 와 TrayIconEvent/MenuEvent 채널로 통합.
tray-icon = "0.24.1"
# icon.ico → RGBA 픽셀 디코드(tray-icon Icon::from_rgba 에 주입).
image = { version = "0.25", features = ["ico"] }

# Common Controls v6 매니페스트를 exe 에 임베드(build.rs). 이게 없으면 트레이 메뉴(muda)가
# 참조하는 TaskDialogIndirect(comctl32 v6) 를 못 찾아 로드 타임에 시작 실패한다. Tauri 는 자동
# 임베드하지만 standalone 바이너리는 수동 — 순수 Rust 라 외부 툴/cross-compile 안전.
[target.'cfg(windows)'.build-dependencies]
embed-manifest = "1"
